# spido_robot_sim

./: README.md
slope/: CMakeLists.txt  package.xml
slope/urdf/: slope.urdf
spido_control/: CMakeLists.txt  package.xml  package.xml~
spido_control/config/: rrbot_control.yaml~  spido_control.yaml  spido_control.yaml~
spido_control/launch/: rrbot_control.launch~  spido_control.launch  spido_control.launch~  spido_rqt.perspective
spido_control/scripts/: cmd_car_to_twist.py  cmd_car_to_twist.py~
spido_description/: CMakeLists.txt  README  README~  package.xml  package.xml~
spido_description/launch/: TODO_spido_rviz.launch~  spido.rviz  spido_rviz.launch  spido_rviz.launch~
spido_description/meshes/: simple_wheel.dae  slope_LINK.STL
spido_description/scripts/: laserscan_frame_broadcaster.py~
spido_description/urdf/: HDL-32E.urdf.xacro  SPIDO.urdf.xacro  SPIDO.urdf.xacro~  rrbot.gazebo~  slope.urdf  spido.gazebo  spido.gazebo~
spido_pure_interface/: CMakeLists.txt  CMakeLists.txt~  package.xml
spido_pure_interface/launch/: Untitled Document~  essai_droite.launch  essai_droite.launch~
spido_pure_interface/msg/: cmd_car.msg  cmd_car.msg~  cmd_drive.msg
spido_pure_interface/src/: Untitled Document 1~  ess.cpp~  interface.c  interface.c~  interface.h  interface.h~  spido_pure_interface.cpp  spido_pure_interface.cpp~  spido_pure_interface_class.cpp  spido_pure_interface_class.cpp~  spido_pure_interface_drive_service (copy).cpp  spido_pure_interface_drive_service.cpp  spido_pure_interface_drive_service.cpp~  spido_pure_interface_sim.cpp  spido_pure_interface_sim.cpp~  talker.cpp~
spido_sim/spido_gazebo/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
spido_sim/spido_gazebo/launch/: SPIDO_sdf_world.launch~  SPIDO_world_st_cyr.launch~  SPIDO_world_st_cyr_no_gui.launch~  spido_reproducer.launch~  spido_slop.launch  spido_world.launch  spido_world.launch~  spido_world2.launch  spido_world_bachir.launch~  spido_world_follower.launch  spido_world_follower_obs.launch  spido_world_original.launch  spido_world_original.launch~  spido_world_roughTerrain.launch  spido_world_st_cyr.launch  spido_world_st_cyr_safe.launch  spido_world_st_cyr_safe.launch~  spido_world_st_cyr_safe_test.launch
spido_sim/spido_gazebo/scripts/: world_transform_broadcaster.py
spido_sim/spido_gazebo/src/: spido_gazebo_driver.cpp  spido_gazebo_driver.cpp~  spido_gazebo_driver_teleop.cpp  spido_gazebo_driver_teleop.cpp~  world_transform_broadcaster.py~
spido_sim/spido_gazebo/worlds/: empty_slope.world  empty_slopee.world  empty_throttled.world  mohamed.world  roughterrain.world  saint_cyr.sdf  (+13 more)
(+15 files in other folders)
