<?xml version="1.0"?>
<package>
  <name>spido_pure_interface</name>
  <version>0.0.0</version>
  <description>The spido_pure_interface package</description>

  <!-- Based on a C library from Chistophe Grand christophe.grand@upmc.fr-->

  <maintainer email="thomas@solatges.fr">Thomas Solatges</maintainer>

  <license>BSD</license>

  <author email="thomas@solatges.fr">Thomas Solatges</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
